--- a/Backend/templates/Customer_register.html
+++ b/Backend/templates/Customer_register.html
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Registeration|Go-VYA</title>
 </head>
+<style>
+    h1 {
+        text-align: center;
+        text-decoration: underline;
+    }
+
+    .container {
+        text-align: center;
+        /* Center aligning the text */
+    }
+
+    .content {
+        text-align: left;
+        /* Left-aligning the text within the container */
+        display: inline-block;
+
+    }
+</style>
+
 <body>
-    
+    <h1>Customer Registeration</h1>
+    <div class="container">
+        <div class="content"><br>
+            <p>Enter Customer Details:</p>
+
+            <form>
+
+                <label for="name">Enter Name:</label>
+                <input type="text" id="name"><br><br>
+
+
+                <label for="pno">Phone Number:</label>
+                <input type="text" id="pno"><br><br>
+
+                <label for="email">Email Address:</label>
+                <input type="text" id="email"><br><br>
+
+                <label for="home">Enter Home Address:</label>
+                <input type="text" id="home"><br><br>
+
+                <label for="password">Create passsword:</label>
+                <input type="password" id="password"><br><br>
+
+                <label for="confirm">Confirm password:</label>
+                <input type="text" id="confirm"><br><br>
+
+                <button>Submit</button>
+                <button type="reset">Reset</button>
+
+            </form>
+        </div>
+    </div>
+
+
 </body>
+
 </html>
