--- a/Backend/templates/Customer.html
+++ b/Backend/templates/Customer.html
@@ -6,14 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Dashboard|Go-VYA</title>
     <style>
-    * {
-        text-align: center;
-    }
+        * {
+            text-align: center;
+        }
+
+        button {
+            display: inline-block;
+        }
+
+        h1 {
+            text-decoration: underline;
+        }
     </style>
 </head>
 
+
 <body>
+    <h1>Customer Dashboard</h1>
     <p>{{Welcome}}</p>
+
+
+    <button>Profile</button>
+    <button>Place Order</button>
+    <button>Check quotes</button>
+    <button>View Status</button>
 </body>
 
 </html>
