--- a/Backend/templates/Provider.html
+++ b/Backend/templates/Provider.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Provider Dashboard|Go-VYA</title>
     <style>
+        #inline {
+            display: inline-block;
+        }
+
         * {
             text-align: center;
         }
+        h1{
+            text-decoration: underline;
+        }
     </style>
 </head>
+
 <body>
+    <h1>Provider Dashboard</h1>
     {{Welcome}}
+    <br>
+    <div id="inline">
+        <button class="button-container">Profile</button>
+        <button class="button-container">View Requests</button>
+        <button class="button-container">Update order status</button>
+        <button class="button-container">View completed Orders</button>
+    </div>
 </body>
+
 </html>
