--- a/Backend/templates/Provider_register.html
+++ b/Backend/templates/Provider_register.html
@@ -1,11 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Provider Registeration|Go-VYA</title>
-</head>
+    <style>
+        h1 {
+            text-align: center;
+            text-decoration: underline;
+        }
+
+        .container {
+            text-align: center;
+            /* Center aligning the text */
+        }
+
+        .content {
+            text-align: left;
+            /* Left-aligning the text within the container */
+            display: inline-block;
+
+        }
+    </style>
+
+
 <body>
-    <!-- Multiplier,type(combobox),address,pan number,phone number,email-id,office address,GST number -->
+    <h1>Provider Registeration</h1>
+    <div class="container">
+        <div class="content"><br>
+            <p>Enter Company Details:</p>
+            
+            <form>
+                
+                <label for="name">Enter Name:</label>
+                <input type="text" id="name"><br><br>
+                
+                
+                <label for="pno">Phone Number:</label>
+                <input type="text" id="pno"><br><br>
+                
+                <label for="email">Email Address:</label>
+                <input type="text" id="email"><br><br>
+                
+                <label for="office">Enter Office Address:</label>
+                <input type="text" id="office"><br>
+                
+                <p>Choose Scale of services you can provide:</p>
+                <input type="checkbox" id="small" name="scale">
+                <label for="small">Small Scale</label><br>
+                <input type="checkbox" id="medium" name="scale">
+                <label for="medium">Medium Scale</label><br>
+                <input type="checkbox" id="large" name="scale">
+                <label for="large">Large Scale</label><br><br>
+                
+                <label for="pan">Pan number:</label>
+                <input type="text" id="pan"><br><br>
+                
+                <label for="gst">Enter Company GST Number:</label>
+                <input type="text" id="gst"><br><br>
+                
+
+                <label for="mult">Entetr Cost Multiplier:</label>
+                <input type="text" id="mult"><br><br>
+
+                <label for="password">Create passsword:</label>
+                <input type="password" id="password"><br><br>
+
+                <label for="confirm">Confirm password:</label>
+                <input type="text" id="confirm"><br><br>
+
+
+                <button>Submit</button>
+                <button type="reset">Reset</button>
+
+            </form>
+        </div>
+    </div>
+
+
 </body>
+</body>
+
 </html>
