Finished the Flask Skeleton

--- a/Backend/templates/Provider.html
+++ b/Backend/templates/Provider.html
@@ -13,7 +13,8 @@
         * {
             text-align: center;
         }
-        h1{
+
+        h1 {
             text-decoration: underline;
         }
     </style>
@@ -22,6 +23,7 @@
 <body>
     <h1>Provider Dashboard</h1>
     {{Welcome}}
+    <p>Id:{{userid}}</p>
     <br>
     <div id="inline">
         <button class="button-container">Profile</button>
