--- a/Backend/templates/Admin.html
+++ b/Backend/templates/Admin.html
@@ -13,7 +13,8 @@
         * {
             text-align: center;
         }
-        h1{
+
+        h1 {
             text-decoration: underline;
         }
     </style>
@@ -21,7 +22,9 @@
 
 <body>
     <h1>Admin Dashboard</h1>
-    <p>{{Welcome}}</p>
+
+    <p>{{welcome}}</p>
+    <p>Id:{{userid}}</p>
     <div id="inline">
         <button class="button-container">Verify registeration requests</button>
         <button class="button-container">View Order Status</button>
