--- a/Backend/templates/Login.html
+++ b/Backend/templates/Login.html
@@ -15,6 +15,10 @@
             font-size: large;
         }
 
+        .disclaimer {
+            color: blue;
+        }
+
         * {
             text-align: center;
         }
@@ -34,7 +38,7 @@
         <br>
         {{form.submit()}}
     </form>
-
+    <div class="disclaimer">Table of user and passwords from the database</div>
     <table align="center">
         <thead>
             <tr>
