--- a/Backend/templates/Customer_register.html
+++ b/Backend/templates/Customer_register.html
@@ -49,6 +49,7 @@
 
                 <label for="name">Enter Name:</label>
                 <input type="text" id="name" name="name" required><br><br>
+                <!-- add function for checking if name in correct format -->
 
 
                 <label for="pno">Phone Number:</label>
