Added profile view and deletion

--- a/Backend/templates/Customer.html
+++ b/Backend/templates/Customer.html
@@ -36,6 +36,7 @@
     <button>Place Order</button>
     <button>Check quotes</button>
     <button>View Status</button>
+    <button>View Completed Orders</button>
 </body>
 
 </html>
