--- a/Backend/templates/Customer.html
+++ b/Backend/templates/Customer.html
@@ -32,8 +32,13 @@
 
         <button>Profile</button>
     </form>
+    <form action="/cust_funct" method='POST'>
+        <input type="hidden" name="user_id" value="{{userid}}">
+        <input type="hidden" name="todo" value=2>
+        <button>Create a New Request</button>
+    </form>
     
-    <button>Place Order</button>
+    
     <button>Check quotes</button>
     <button>View Status</button>
     <button>View Completed Orders</button>
