Added employee assistance

--- a/Backend/templates/admin_funct.html
+++ b/Backend/templates/admin_funct.html
@@ -39,10 +39,10 @@
         <thead>
 
             <tr>
-                <th>p_ID </th>
-                <th>p_scale </th>
-                <th>p_officeaddr </th>
-                <th>p_phoneNo</th>
+                <th>Employee ID: </th>
+                <th>Email ID: </th>
+                <th>Employee Phone No(s): </th>
+                <th>salary</th>
                 <th>Is Assisting <br>(0 means not assigned)</th>
 
             </tr>
