--- a/Backend/templates/Cust_funct.html
+++ b/Backend/templates/Cust_funct.html
@@ -92,7 +92,47 @@
     <div>
         {% if funct==2 %}
         {% if success %}
-            <p id="pop_up">Your Request with Id:{{r_id}}has been created successfully</p>
+        <p id="pop_up">Your Request with Id:{{r_id}}has been created successfully</p>
+        {%endif%}
+        {% if assigned %}
+        <div id="pop_up">
+            <p>
+                Employee has been assigned<br>
+                Employee Details:
+            </p>
+            <table align="center" border="1">
+
+                <thead>
+                    <tr>
+                        <th>Employee ID: </th>
+                        <th>Email ID: </th>
+                        <th>Employee Phone No(s): </th>
+                    </tr>
+                </thead>
+                <tbody>
+
+
+                    <tr>
+                        <td>{{row[0]}}</td>
+                        <td>{{row[1]}}</td>
+                        <td>
+                            {% for row2 in cur2 %}
+                            {% if row[0]==row2[0] %}
+                            {{row[4]}}<br>
+                            {% endif %}
+                            {% endfor %}
+                        </td>
+
+
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        {%endif%}
+        {% if unassigned %}
+        <div id="pop_up">
+            <p>No Employee is currently available.Try again in some time.</p>
+        </div>
         {%endif%}
         <h1 id="head">Create request</h1>
         <form action="/cust_funct" method="post">
@@ -110,7 +150,7 @@
 
             <label for="dist">Distance:</label>
             <input type="text" id="dist" name="dist" required><br><br>
-            
+
             <label for="startpt">Pickup Location:</label>
             <input type="text" id="start" name="startpt" required><br><br>
 
@@ -122,13 +162,13 @@
         </form>
 
 
-        <form action="/cust_funct">
+        <form action="/cust_funct" , method="post">
             <input type="hidden" name="user_id" value="{{userid}}">
             <input type="hidden" name="todo" value=9>
             <label for="assist">Need Assistance(Paid Service):</label>
             <button id="assist">Need Assistance?</button>
         </form>
-       
+
         {%endif%}
     </div>
 </body>
