Added creating quotes requests

--- a/Backend/templates/Cust_funct.html
+++ b/Backend/templates/Cust_funct.html
@@ -139,16 +139,16 @@
             <input type="hidden" name="user_id" value="{{userid}}">
             <input type="hidden" name="todo" value=8>
 
-            <label for="weight">Weight of Package(In Kg):</label>
+            <label for="weight">Weight of Package(Kg):</label>
             <input type="text" id="weight" name="weight" required><br><br>
 
-            <label for="size">volumetric Size(in L):</label>
+            <label for="size">volumetric Size(L):</label>
             <input type="text" id="size" name="size" required><br><br>
 
-            <label for="speed">Expected Delivery Time(in days):</label>
+            <label for="speed">Expected Delivery Time(days):</label>
             <input type="text" id="speed" name="speed" required><br><br>
 
-            <label for="dist">Distance:</label>
+            <label for="dist">Distance(Km):</label>
             <input type="text" id="dist" name="dist" required><br><br>
 
             <label for="startpt">Pickup Location:</label>
