--- a/Backend/templates/admin_funct.html
+++ b/Backend/templates/admin_funct.html
@@ -41,8 +41,8 @@
             <tr>
                 <th>Employee ID: </th>
                 <th>Email ID: </th>
-                <th>Employee Phone No(s): </th>
-                <th>salary</th>
+                <th>Salary </th>
+                <th>Employee Phone No(s):</th>
                 <th>Is Assisting <br>(0 means not assigned)</th>
 
             </tr>
